--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description:
 keywords:
 author: Roxas Deng
-language:
+language: zh_CN
 timezone:
 
 # URL
@@ -40,6 +40,7 @@ relative_link: false
 future: true
 highlight:
   enable: true
+  hljs: true
   line_number: true
   auto_detect: false
   tab_replace:
@@ -73,10 +74,25 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: aria
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
   repo: git@github.com:roxas332519096/roxas332519096.github.io.git
+
+# Hexo local search
+search:
+  path: search.xml
+  field: all
+
+# Hexo feed
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
+  content_limit: 140
+  content_limit_delim: ' '
