--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
+  enable: false
   hljs: true
-  line_number: true
+  line_number: false
   auto_detect: false
   tab_replace:
   
@@ -74,7 +74,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: snark
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
