--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "3.7.1"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -18,6 +18,8 @@
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-njucks": "^1.0.0",
+    "hexo-renderer-pug": "^3.0.0",
+    "hexo-renderer-sass": "^0.5.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.2.0"
   }
